Ajustado o cadastro de usuario e feita primeira carga de dados para empresa, colaborador e usuario.

--- a/Finance/WebContent/publico/usuario.xhtml
+++ b/Finance/WebContent/publico/usuario.xhtml
@@ -11,13 +11,12 @@
 <!-- 		<hr /> -->
 		<h:form id="cadastro">
 			<h:messages errorClass="error" infoClass="info" />
-			<h:inputHidden value="#{usuarioBean.usuario.codigo}"/>
 			<h:inputHidden value="#{usuarioBean.usuario.ativo}"/>
 			<h:inputHidden value="#{usuarioBean.destinoSalvar}"/>
 			
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Nome:" for="nome"/>
-				<h:inputText id="nome" label="Nome" value="#{usuarioBean.usuario.nome}" 
+				<h:inputText id="nome" label="Nome" value="#{usuarioBean.col.nomeFantasia}" 
 							 size="30" maxlength="30" required="true" requiredMessage="Você não tem nome?">
 					<f:validateLength minimum="10" maximum="30"/>
 				</h:inputText>
