Organizada todas as classes com todas as chaves primarias simples, generateVale, hashCode and equals, serealizable e logando no sistema.

--- a/Finance/WebContent/publico/usuarioSucesso.xhtml
+++ b/Finance/WebContent/publico/usuarioSucesso.xhtml
@@ -8,7 +8,7 @@
   <ui:composition template="/templates/interna.xhtml">
   	 <ui:define name="titulo">Cadastro de Usuários</ui:define>
 	 <ui:define name="corpo">
-		<h1><h:outputText value="#{usuarioBean.col.nomeFantasia}"/>, seja Bem-vindo</h1>
+		<h1><h:outputText value="#{usuarioBean.col.nomefantasia}"/>, seja Bem-vindo</h1>
 		Seu cadastro foi efetuado com sucesso.
 		<br />
 		
