--- a/Finance/WebContent/publico/usuario.xhtml
+++ b/Finance/WebContent/publico/usuario.xhtml
@@ -16,7 +16,7 @@
 			
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Nome:" for="nome"/>
-				<h:inputText id="nome" label="Nome" value="#{usuarioBean.col.nomeFantasia}" 
+				<h:inputText id="nome" label="Nome" value="#{usuarioBean.col.nomefantasia}" 
 							 size="30" maxlength="30" required="true" requiredMessage="Você não tem nome?">
 					<f:validateLength minimum="10" maximum="30"/>
 				</h:inputText>
