--- a/Finance/WebContent/restrito/lisclientes.xhtml
+++ b/Finance/WebContent/restrito/lisclientes.xhtml
@@ -5,14 +5,14 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:sec="http://www.springframework.org/security/facelets/tags"
       xmlns:p="http://primefaces.org/ui"> 
-
-  <ui:composition template="/templates/interna.xhtml">
-  	 <ui:define name="titulo">Clientes</ui:define>
+      
+      
+  <ui:composition template="/templates/interna.xhtml">  	
 	 <ui:define name="corpo">
 		<h:form>			
 			
-			<h:panelGrid columns="1"  >			
-				<p:commandButton value="Novo" action="#{clienteBean.novo()}"/>
+			<h:panelGrid columns="2">
+				<p:commandButton  value="Novo" actionListener="#{clienteBean.openDialog()}" />
 			</h:panelGrid>
 			
 			<p:dataTable id="listacliente" value="#{clienteBean.lista}" var="cliente">			
