--- a/Finance/WebContent/restrito/menu_sistema.xhtml
+++ b/Finance/WebContent/restrito/menu_sistema.xhtml
@@ -34,6 +34,7 @@
 					<h3 class="link-titulo">Cadastros</h3>
 					<ul class="box">
 						<li><a href="lisclientes.jsf">Clientes</a></li>
+						<li><a href="cadcliente.jsf">Cadastro Clientes</a></li>
 						<li><a href="#">Fornecedores</a></li>
 						<li><a href="usuarios.jsf">Usuários</a></li>
 					</ul>
